# Talon-OCAAS

./: .gitignore  CMakeLists.txt  Installation  RAO.hzn  README.md  TODO  TODO.master  csimc.service  talon.conf  telescope.service  telescope.sh  weather.service  xephem.sit
libwcs/: OA  (+2 more)
src/: CMakeLists.txt
src/CSIMC/bdm12/: Makefile  bdm12.c  rr.c
src/CSIMC/csimcd/: Makefile  csimcd.c
src/CSIMC/embedded/: Makefile  Makefile.ht  README  boot.c  cq.c  eeprom.c  end.c  exec.c  funcs.c  gram.tab.c  gram.y  intr.c  lan.c  lex.c  lp.c  main.c  mkflex_prog  motenc.c  motion.c  motion.damp  rs232.c  rtitest.c  s19tocmf  s19tocmf.c  sa.h  saloader.c  sci1test.c  skeleton.c  start.c  thread.c  ufuncs.c  utils.c  var.c  yymung
src/FITS/: fits.simple
src/FITS/wcslib-1.0/: README
src/FITS/worldpos/: Makefile  testpos.c  worldpos.c
src/GUI/camera/: Makefile  README  arith.c  basic.c  blink.c  camera.c  camera.h  corr.c  del.c  drift.c  epoch.c  fits.c  glass.c  gsclim.c  hist.c  ip.c  luts.c  mag.c  main.c  markers.c  measure.c  open.c  patchlevel.c  patchlevel.h  photom.c  photomabs.c  print.c  ps.c  query.c  save.c  stars.c  wcs.c  winhist.c  ximage.c
src/GUI/mksch/: msg.c
src/GUI/pvoptions/: Makefile  halfmgui.c  onemgui.c  pvoptions.h  rwcfg.c  rwcfg.h
src/GUI/shm/: -  Makefile  shm.c
src/GUI/telsched/: CameraCal.sch  chksch.c  obsdsp.c  print.c  readsls.c  sample.sch  telsched.c
src/GUI/xephem/: Imakefile  Makefile  Makefile.smple  XEphem.ad  aavso.c  atlas.c  bdl.c  calmenu.c  closemenu.c  compiler.c  datamenu.c  db.c  dbmenu.c  dm.h  earthmenu.c  fits.c  fits.h  formats.c  fsmenu.c  glance.c  gsc.c  gscnet.c  hznmenu.c  jupmenu.c  mainmenu.c  map.h  marsmmenu.c  moonnf.c  plot_aux.c  ppm.c  progress.c  ps.c  ps.h  rotated.c  rotated.h  sites.h  skyannot.idea  skyfits.c  skylist.h  skytoolbar.c  (+5 more)
src/GUI/xobs/: Makefile  autofocus.c  control.c  dome.c  fifos.c  scope.c  tips.c  widgets.h  xephem.c  xobs.h
src/daemons/camerad/: Makefile  README  camerad.c
src/daemons/rund/: Makefile  rund.c
src/daemons/shmd/: shmd.c
src/daemons/telescoped/: Makefile
src/daemons/telescoped.atf/: focus.c  pc39.c  pc39tst.c  shutter.c  telctrl.c  telescoped.c
src/daemons/telescoped.csi/: Makefile  README  axes.c  basic.cmc  find.cmc  focus.c  mountcor.c  tel.c  telescoped.c
src/daemons/telescoped.jsfhalfm/: README  fifoio.c  lights.c  tel.c
src/daemons/telescoped.jsfonem/: Makefile  README  axes.c  fifoio.c  lights.c  teled.h  telescoped.c
src/daemons/telescoped.oms/: Makefile  dome.c  fifoio.c  filter.c  lights.c
src/daemons/telrun/: pr_bias.c  pr_flat.c  pr_regscan.c  pr_thermal.c  telrun.h
src/daemons/telrun.jsf/: postprocess.csh  pr_bias.c  pr_flat.c  pr_regscan.c  pr_thermal.c  telrun.c
src/daemons/wxd/: davis.c  dd.h  page.c  url.c
src/libs/: CMakeLists.txt
src/libs/libXmisc/: CMakeLists.txt  Makefile  catbrowse.c  catbrowse.h  xtools.c  xtools.h
src/libs/libastro/: CMakeLists.txt  Imakefile  Makefile  README  aa_hadec.c  aberration.c  actan.c  airmass.c  circum.h  dbfmt.c  deepconst.h  deltat.c  eq_ecl.c  formats.c  misc.c  mjd.c  parallax.c  precess.c  riset_hzn.c  satlib.h  satspec.h  sattypes.h  sdp4.c  sgp4.c  thetag.c  utc_gst.c  vector.h  vsop87.c
src/libs/libfits/: CMakeLists.txt  Makefile  Makefile.bzero  README  align2fits.c  edgeStats.c  filters.c  fits.c  fits.h  fitscorr.h  fitsip.blob  fitsip.borderwalk  fitsip.c  fitsip.c.from.2.0.11CD  fitsip.c.from.elwood  fitsip.good  fitsip.good2  fitsip.good3  fitsip.good4  fitsip.good5  fitsip.new
src/libs/libfs/: CMakeLists.txt  Makefile  README  fieldstar.h  gsc.c  sadump.c  usno.c
src/libs/libmisc/: CMakeLists.txt  Makefile  Makefile.tests  README  catalogs.c  catalogs.h  ccdcamera.c  ccdcamera.h  cliserv.h  configfile.c  configfile.h  crackini.c  crackini.h  csimc.c  csimc.h  dio.h  focustemp.c  funcmax.c  lstsqr.c  lstsqr.h  pc39.h  photstd.c  photstd.h  rot.h  scan.c  scan.h  strops.c  strops.h  telaxes.c  telenv.c  telenv.h  telfits.c  telfits.h  telstatshm.h
src/libs/libwcs/: CMakeLists.txt  align2wcs.c  checkwcsfits.c  delwcsfits.c  findreg.c  resetwcs.c  setwcsfits.c  worldpos.c  xyradec.c
src/tools/calimage/: calimage.c
src/tools/camtest/: Makefile  README  camtest.c  camtesthi.c
src/tools/crop/: Makefile
src/tools/csi/: Makefile  csi  csi.c
src/tools/distimages/: Makefile  distemail.pl  distimages.pl
src/tools/dynamics/: Makefile  dynamics  dynamics.c
src/tools/findobj/: Makefile  findobj.c
src/tools/findstars/: findstars.c
src/tools/fio/: CMakeLists.txt  Makefile  fio
src/tools/fitshdr/: Makefile  fitshdr.c
src/tools/fitswindow/: fitstogif  fitswindow.c
src/tools/focustemp/: focustemp.c
src/tools/fphotom/: fphotom.c
src/tools/fwhm/: Makefile  fwhm.c
src/tools/imio/: Makefile  imread.pl  imwrite.pl
src/tools/misc/: Makefile  degrad.c  flipfits.c  hrrad.c  lookup.c  mkfits.c  offsetfits.c  raddeg.c  radhr.c
src/tools/mklog/: fitslog
src/tools/mntmodel/: Makefile  README  makefile.testsham  mntmodel  mntmodel.c
src/tools/mosaic/: Makefile  rectangles.h
src/tools/neoelong/: neoelong.c
src/tools/orbfit/: Makefile  etst
src/tools/photcal/: Makefile  README  photcal.h  photcal.out  photcal.ref  solvev0kp.c
src/tools/photom/: Makefile  README  cropping.c  formats.c  photprep.csh  readconfig.c  tst.pho
src/tools/ppp/: README  crontab  nog.chat  nogchkin  setntp
src/tools/predict/: README
src/tools/pterrors/: Makefile  README  pterrors.c  ptmeshadd.c
src/tools/pvcam/: addexpimg.pl  datareduce.pl  pipeln1m.cfg.pl  pipeln1m.pl  pixelvision_error_codes.txt  pv-notes.txt  pvc1m-mstr.pl  pvc1m.cfg-real  pvc1m.cfg-test  pvc1m.cfg-testreal  pvc1m.cfg.home.static  pvc1m.cfg.pl  pvc1m.cfg.vcam  pvcam.cfg-vir  pvcam.cfg.1M.pl  pvcam.pl  pvcam.virtual  settings.sav  testgo.home.pl  testgo.online.pl  upall
src/tools/ricoh/: ccdoperbackup
src/tools/snsearch/: Makefile  README  snsearch.c
src/tools/spectrocam/: Makefile
src/tools/user/: Makefile  boot  killTel  startTel  telsecure
src/tools/vcam/: Makefile  vcam.pl  vcam_DSS-1_STECF.cfg  (+1 more)
(+1676 files in other folders)
